Match divs with 12 different colours / make them into 12 pairs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,64 @@ div {
     height: 100px;
     width: 100px;
     background-color: #ffcccc;
-    height: 33.33vh;
-    border:3px solid black;
-    flex-basis: 15%;
-    flex-grow: 1;
+    border: 1px solid black;
+    margin: 1px;
+    /*flex-basis: 15%;
+    flex-grow: 1; */
+}
+
+.one {
+    background-color: blue;
+}
+
+.two {
+    background-color: green;
+}
+
+.three {
+    background-color: yellow;
+}
+
+.four {
+    background-color: yellowgreen ;
+}
+
+.five {
+    background-color: blueviolet;
+}
+
+.six {
+    background-color: whitesmoke;
+}
+
+.seven {
+    background-color: orangered;
+}
+
+.eight {
+    background-color: orange;
+}
+
+.nice {
+    background-color: hotpink;
+}
+
+.ten {
+    background-color: mediumseagreen;
+}
+
+.eleven {
+    background-color: sienna;
+}
+
+.twelve {
+    background-color: lightblue;
+}
+
+.matched /* two cards that are a match and no longer a part of the game */ {
+    background-color: white;
+}
+
+.hidden /* changing back to the regular colour, after cards were visible for a couple of seconds */ {
+    background-color: #ffcccc;
 }
